# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  17 Nov 2007; Andrew Gaffney <agaffney@gentoo.org> arch/mips.py:
  apply patch for mips n32 support from Stuart Longland <redhatter@gentoo.org>
  in bug #197917

  17 Nov 2007; Andrew Gaffney <agaffney@gentoo.org>
  targets/livecd-stage2/livecd-stage2-controller.sh,
  targets/support/livecdfs-update.sh:
  create symlink for /etc/gconf and /var/db when moving to /usr/livecd
  remove preservation of eclasses/profiles
  remove copying of livecd-local.start since it's not needed anymore

  16 Nov 2007; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/livecdfs-update.sh, targets/support/unmerge.sh:
  move moving of /var/db back to livecdfs-update.sh but keep the symlink so we
  can unmerge

  13 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/livecdfs-update.sh, targets/support/unmerge.sh:
  Removing old mkvardb code which is no longer used, commenting out setting of
  Gnome theme for testing now that Clearlooks has been default for some time,
  and changing vdb move from a case statement to a simple if statement. This
  is 2.0.5_pre5 for testing.

  13 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/stage1_target.py:
  Removing cleaning of python encodings for bug #64890.

  11 Nov 2007; Andrew Gaffney <agaffney@gentoo.org>
  modules/generic_stage_target.py:
  Add an extra warning into the generated make.conf about changing the CHOST

  01 Nov 2007; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/livecdfs-update.sh:
  We don't need to copy files from /usr/lib/hotplug/firmware anymore.

  29 Oct 2007; Andrew Gaffney <agaffney@gentoo.org>
  targets/embedded/embedded-preclean-chroot.sh,
  targets/grp/grp-preclean-chroot.sh,
  targets/livecd-stage1/livecd-stage1-preclean-chroot.sh,
  targets/stage2/stage2-preclean-chroot.sh,
  targets/stage3/stage3-preclean-chroot.sh,
  targets/tinderbox/tinderbox-preclean-chroot.sh: